# unity-kataru

./: .gitignore  Kataru.asmdef  LICENSE  README.md  build.ps1  build.sh  build_linux.sh  package.json
.Rust/: Cargo.toml
.Rust/src/: bookmark.rs  choices.rs  codegen.rs  commands.rs  dialogue.rs  ffi.rs  lib.rs  story.rs
.Rust/tests/: bookmark.rs  codegen.rs
.Rust/tests/data/story/: global.yml
.Rust/tests/data/story/Rooms/: Room1.yml  Room2.yml
Editor/: Kataru.Editor.asmdef  Validator.cs
FFI/: FFI.cs  FFIArray.cs  FFIStr.cs
Handler/: Attributes.cs  DelegateMap.cs  EventMap.cs  Handler.cs  HandlerExtended.cs
Plugins/OSX/: kataru_ffi.dylib
Plugins/WebGL/: kataru_ffi.bc
Runner/: Constants.Generated.cs  Constants.cs  KataruSettings.cs  Manager.cs  NamespaceUtils.cs  Runner.cs  Types.cs
