[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
edition = "2018"
name = "kataru-ffi"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kataru = {version = "0.1.13" }
lazy_static = "1.5.0"
serde = "1.0.217"
serde_json = "1.0.134"

[lints.rust]
static_mut_refs = 'allow'
