[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
edition = "2018"
name = "kataru-ffi"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kataru = {version = "0.2.2" }
lazy_static = "1.5"
serde = "1.0"
serde_json = "1.0"

[lints.rust]
static_mut_refs = 'allow'
